Tested Rest API end point /api/v1/events